Fix footer size on mobile and copyright

--- a/resources/assets/sass/partials/_footer.scss
+++ b/resources/assets/sass/partials/_footer.scss
@@ -4,6 +4,15 @@
     background: $styleci-dark-primary;
     color: white;
 
+    .copyright {
+        text-align: right;
+        font-size: 12px;
+        color: $styleci-light;
+        border-top: 1px solid $styleci-divider;
+        margin-top: 10px;
+        padding-top: 10px;
+    }
+
     .logo {
         text-align: center;
     }
@@ -12,15 +21,11 @@
         text-align: right;
     }
 
-    .social-links, .copyright {
-        padding-top: 8px;
-    }
-
     @media (max-width: $screen-xs-max) {
-        .social-links, .copyright, .logo {
+        .social-links, .platform-links, .logo {
             margin-bottom: 10px;
         }
-        .social-links, .copyright {
+        .social-links, .platform-links, .copyright {
             text-align: center;
         }
     }
@@ -30,6 +35,7 @@
         list-style-type: none;
         margin: 0;
         padding: 0;
+        padding-top: 8px;
 
         li {
             margin-right: 10px;
@@ -49,6 +55,13 @@
     i {
         font-size: 25px;
         margin-right: 18px;
+    }
+}
+
+@media (max-width: $screen-xs-max) {
+    .footer {
+        padding-bottom: 25px;
+        padding-top: 25px;
     }
 }
 
